--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5181,7 +5181,7 @@ periodics:
         -label:lifecycle/stale
         -label:lifecycle/rotten"
       - "--updated=2160h"
-      - "--token=/etc/hub-token/token"
+      - "--token=/etc/housekeeping-github-token/token"
       - "|-
         --comment=Issues go stale after 90d of inactivity.
         Mark the issue as fresh with /remove-lifecycle stale.
@@ -5193,13 +5193,13 @@ periodics:
       - "--ceiling=10"
       - "--confirm"
       volumeMounts:
-      - name: hub-token
-        mountPath: /etc/hub-token
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
         readOnly: true
     volumes:
-    - name: hub-token
+    - name: housekeeping-github-token
       secret:
-        secretName: hub-token
+        secretName: housekeeping-github-token
 - cron: "0 */12 * * *"
   name: periodic-test-infra-rotten
   agent: kubernetes
@@ -5220,7 +5220,7 @@ periodics:
         label:lifecycle/stale
         -label:lifecycle/rotten"
       - "--updated=720h"
-      - "--token=/etc/hub-token/token"
+      - "--token=/etc/housekeeping-github-token/token"
       - "|-
         --comment=Stale issues rot after 30d of inactivity.
         Mark the issue as fresh with /remove-lifecycle rotten.
@@ -5232,13 +5232,13 @@ periodics:
       - "--ceiling=10"
       - "--confirm"
       volumeMounts:
-      - name: hub-token
-        mountPath: /etc/hub-token
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
         readOnly: true
     volumes:
-    - name: hub-token
+    - name: housekeeping-github-token
       secret:
-        secretName: hub-token
+        secretName: housekeeping-github-token
 - cron: "0 */12 * * *"
   name: periodic-test-infra-close
   agent: kubernetes
@@ -5258,7 +5258,7 @@ periodics:
         -label:lifecycle/frozen
         label:lifecycle/rotten"
       - "--updated=720h"
-      - "--token=/etc/hub-token/token"
+      - "--token=/etc/housekeeping-github-token/token"
       - "|-
         --comment=Rotten issues close after 30d of inactivity.
         Reopen the issue with /reopen.
@@ -5269,13 +5269,13 @@ periodics:
       - "--ceiling=10"
       - "--confirm"
       volumeMounts:
-      - name: hub-token
-        mountPath: /etc/hub-token
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
         readOnly: true
     volumes:
-    - name: hub-token
+    - name: housekeeping-github-token
       secret:
-        secretName: hub-token
+        secretName: housekeeping-github-token
 postsubmits:
   knative/serving:
   - name: post-knative-serving-go-coverage
