--- a/ci/prow/plugins.yaml
+++ b/ci/prow/plugins.yaml
@@ -18,6 +18,11 @@ approve:
   - google/knative-gcp
   require_self_approval: false
   ignore_review_state: false
+  
+heart:
+  adorees:
+  - TrevorFarrelly
+  commentregexp: "fixed"
 
 repo_milestone:
   # Default maintainer
