--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -49,7 +49,7 @@ RUN bazel version > /bazel_version
 RUN bazel shutdown
 
 # Extract ko version
-RUN git ls-remote https://github.com/google/ko HEAD | cut -f1 > /ko_version
+RUN ko version > /ko_version
 
 # Extra tools through gem
 RUN gem install mixlib-config -v 2.2.4  # required because ruby is 2.1
