--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -20,6 +20,13 @@ presubmits:
       - release-0.5
       - release-0.6
       - release-0.7
+      go112-branches:
+      - release-0.4
+      - release-0.5
+      - release-0.6
+      - release-0.7
+      - release-0.8
+      - release-0.9
     - build-tests: true
       resources:
         requests:
@@ -188,6 +195,7 @@ periodics:
     - continuous: true
       timeout: 100
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -206,20 +214,26 @@ periodics:
     - custom-job: istio-1.2-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
       dot-dev: true
+      go113: true
     - custom-job: istio-1.2-no-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
       dot-dev: true
+      go113: true
     - custom-job: istio-1.3-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
       dot-dev: true
+      go113: true
     - custom-job: istio-1.3-no-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
       dot-dev: true
+      go113: true
     - custom-job: gloo-0.17.1
       full-command: "./test/e2e-tests.sh --gloo-version 0.17.1"
       dot-dev: true
+      go113: true
     - nightly: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -227,6 +241,7 @@ periodics:
           memory: 16Gi
     - dot-release: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -234,6 +249,7 @@ periodics:
           memory: 16Gi
     - auto-release: true
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -241,14 +257,18 @@ periodics:
           memory: 16Gi
     - latency: true
       dot-dev: true
+      go113: true
     - performance: true
       dot-dev: true
+      go113: true
     - performance-mesh: true
       dot-dev: true
+      go113: true
       args:
       - "--mesh"
     - webhook-apicoverage: true
       dot-dev: true
+      go113: true
 
   knative/client:
     - continuous: true
