--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5750,7 +5750,7 @@ periodics:
       secret:
         secretName: backup-account
 - cron: "0 */12 * * *"
-  name: ci-knative-issue-tracker-stale
+  name: ci-knative-test-infra-issue-tracker-stale
   agent: kubernetes
   decorate: true
   extra_refs:
@@ -5772,11 +5772,11 @@ periodics:
         -label:lifecycle/rotten"
       - "--updated=2160h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Issues go stale after 90d of inactivity.<br/>
-        Mark the issue as fresh with /remove-lifecycle stale.<br/>
-        Stale issues rot after an additional 30d of inactivity and eventually close.<br/>
-        If this issue is safe to close now please do so with /close.<br/><br/>
-        Send feedback to Knative Productivity Slack channel or knative/test-infra.<br/><br/>
+      - "--comment=Issues go stale after *90d* of inactivity.<br/>
+        Mark the issue as fresh by adding the comment <code>/remove-lifecycle stale</code>.<br/>
+        Stale issues rot after an additional *30d* of inactivity and eventually close.<br/>
+        If this issue is safe to close now please do so by adding the comment <code>/close</code>.<br/><br/>
+        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra).<br/><br/>
         /lifecycle stale"
       - "--template"
       - "--ceiling=10"
@@ -5790,7 +5790,7 @@ periodics:
       secret:
         secretName: housekeeping-github-token
 - cron: "0 */12 * * *"
-  name: ci-knative-issue-tracker-rotten
+  name: ci-knative-test-infra-issue-tracker-rotten
   agent: kubernetes
   decorate: true
   extra_refs:
@@ -5812,11 +5812,11 @@ periodics:
         -label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Stale issues rot after 30d of inactivity.<br/>
-        Mark the issue as fresh with /remove-lifecycle rotten.<br/>
-        Rotten issues close after an additional 30d of inactivity.<br/>
-        If this issue is safe to close now please do so with /close.<br/><br/>
-        Send feedback to Knative Productivity Slack channel or knative/test-infra.<br/><br/>
+      - "--comment=Stale issues rot after *30d* of inactivity.<br/>
+        Mark the issue as fresh by adding the comment <code>/remove-lifecycle rotten</code>.<br/>
+        Rotten issues close after an additional *30d* of inactivity.<br/>
+        If this issue is safe to close now please do so by adding the comment <code>/close</code>.<br/><br/>
+        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra).<br/><br/>
         /lifecycle rotten"
       - "--template"
       - "--ceiling=10"
@@ -5830,7 +5830,7 @@ periodics:
       secret:
         secretName: housekeeping-github-token
 - cron: "0 */12 * * *"
-  name: ci-knative-issue-tracker-close
+  name: ci-knative-test-infra-issue-tracker-close
   agent: kubernetes
   decorate: true
   extra_refs:
@@ -5851,10 +5851,128 @@ periodics:
         label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "--comment=Rotten issues close after 30d of inactivity.<br/>
-        Reopen the issue with /reopen.<br/>
-        Mark the issue as fresh with /remove-lifecycle rotten.<br/><br/>
-        Send feedback to Knative Productivity Slack channel or knative/test-infra.<br/><br/>
+      - "--comment=Rotten issues close after *30d* of inactivity.<br/>
+        Reopen the issue with <code>/reopen</code>.<br/>
+        Mark the issue as fresh by adding the comment <code>/remove-lifecycle rotten</code>.<br/><br/>
+        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra).<br/><br/>
+        /close"
+      - "--template"
+      - "--ceiling=10"
+      - "--confirm"
+      volumeMounts:
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
+        readOnly: true
+    volumes:
+    - name: housekeeping-github-token
+      secret:
+        secretName: housekeeping-github-token
+- cron: "0 */12 * * *"
+  name: ci-knative-docs-issue-tracker-stale
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
+      imagePullPolicy: Always
+      command:
+      - "/app/robots/commenter/app.binary"
+      args:
+      - "--query=repo:knative/docs
+        is:issue
+        is:open
+        -label:lifecycle/frozen
+        -label:lifecycle/stale
+        -label:lifecycle/rotten"
+      - "--updated=2160h"
+      - "--token=/etc/housekeeping-github-token/token"
+      - "--comment=Issues go stale after *90d* of inactivity.<br/>
+        Mark the issue as fresh by adding the comment <code>/remove-lifecycle stale</code>.<br/>
+        Stale issues rot after an additional *30d* of inactivity and eventually close.<br/>
+        If this issue is safe to close now please do so by adding the comment <code>/close</code>.<br/><br/>
+        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra).<br/><br/>
+        /lifecycle stale"
+      - "--template"
+      - "--ceiling=10"
+      - "--confirm"
+      volumeMounts:
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
+        readOnly: true
+    volumes:
+    - name: housekeeping-github-token
+      secret:
+        secretName: housekeeping-github-token
+- cron: "0 */12 * * *"
+  name: ci-knative-docs-issue-tracker-rotten
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
+      imagePullPolicy: Always
+      command:
+      - "/app/robots/commenter/app.binary"
+      args:
+      - "--query=repo:knative/docs
+        is:issue
+        is:open
+        -label:lifecycle/frozen
+        label:lifecycle/stale
+        -label:lifecycle/rotten"
+      - "--updated=720h"
+      - "--token=/etc/housekeeping-github-token/token"
+      - "--comment=Stale issues rot after *30d* of inactivity.<br/>
+        Mark the issue as fresh by adding the comment <code>/remove-lifecycle rotten</code>.<br/>
+        Rotten issues close after an additional *30d* of inactivity.<br/>
+        If this issue is safe to close now please do so by adding the comment <code>/close</code>.<br/><br/>
+        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra).<br/><br/>
+        /lifecycle rotten"
+      - "--template"
+      - "--ceiling=10"
+      - "--confirm"
+      volumeMounts:
+      - name: housekeeping-github-token
+        mountPath: /etc/housekeeping-github-token
+        readOnly: true
+    volumes:
+    - name: housekeeping-github-token
+      secret:
+        secretName: housekeeping-github-token
+- cron: "0 */12 * * *"
+  name: ci-knative-docs-issue-tracker-close
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
+      imagePullPolicy: Always
+      command:
+      - "/app/robots/commenter/app.binary"
+      args:
+      - "--query=repo:knative/docs
+        is:issue
+        is:open
+        -label:lifecycle/frozen
+        label:lifecycle/rotten"
+      - "--updated=720h"
+      - "--token=/etc/housekeeping-github-token/token"
+      - "--comment=Rotten issues close after *30d* of inactivity.<br/>
+        Reopen the issue with <code>/reopen</code>.<br/>
+        Mark the issue as fresh by adding the comment <code>/remove-lifecycle rotten</code>.<br/><br/>
+        Send feedback to [Knative Productivity Slack channel](https://knative.slack.com/messages/CCSNR4FCH) or file an issue in [knative/test-infra](https://github.com/knative/test-infra).<br/><br/>
         /close"
       - "--template"
       - "--ceiling=10"
